--- a/main.html
+++ b/main.html
@@ -9,7 +9,9 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			//Write your code here
+			 let n=arr.length;
+     arr.sort();
+     return arr[n-2];
 			
 		}
 
