--- a/main.html
+++ b/main.html
@@ -10,6 +10,14 @@
 	<script>
 		function secondHighest(arr) {
 			 let n=arr.length;
+			 if(n==0){
+        return "undefined"
+    }
+    if(n==1){
+        return "undefined"
+    }
+
+			
      arr.sort();
      return arr[n-2];
 			
