--- a/main.html
+++ b/main.html
@@ -9,17 +9,19 @@
 <body>	
 	<script>
 		function secondHighest(arr) {
-			 let n=arr.length;
-			    if(n==0){
-        return "undefined"
-    }
-   else if(n==1){
-        return "undefined"
-    }
-  else  if(n>1){
-        arr.sort();
-        return arr[n-2];
-    }
+			let first=-Infinity, second=-Infinity;
+for (let i=0;i<arr.length;i++){
+if(arr[i]>first){
+second=first;
+first=arr[i];
+}
+else if(arr[i]>second &&arr[i]<first){
+second=arr[i];
+}
+
+}
+return second;
+
 		}
 
 		function Main() {
